[package]
name = "optarray"
version = "1.0.2"
edition = "2024"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Resizable Arrays in Optimal Time and Space"
repository = "https://github.com/nlfiedler/optarray"
readme = "README.md"
keywords = [
    "collections",
    "dynamic-arrays",
    "extensible-arrays",
    "resizable-arrays",
    "data-structures",
]
categories = ["data-structures"]
license = "MIT"
exclude = ["TODO.org", "test/*"]

[dev-dependencies]
ulid = "1.2.1"
